sites/all/themes/sammenomaarhus/css/styles.css
/* ... */
  article.node-proposal div.field-name-field-category {
    background: white; }
    article.node-proposal div.field-name-field-category a {
      text-decoration: none; }
  article.node-proposal div.bubble {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    position: relative;
    border: 2px dashed rgba(255, 255, 255, 0.5);
    padding: 15px;
    margin-top: 15px;
    margin-bottom: 15px; }
    article.node-proposal div.bubble div.submitted {
      margin-bottom: 0.75em;
      font-size: 1em; }
      article.node-proposal div.bubble div.submitted span.username,
      article.node-proposal div.bubble div.submitted a {
        color: #f2f2f2; }
    article.node-proposal div.bubble p {
      font-size: 1em; }
    article.node-proposal div.bubble a {
      color: #f2f2f2; }
      article.node-proposal div.bubble a:hover, article.node-proposal div.bubble a:focus {
        text-decoration: none; }
  article.node-proposal div.bubble-teaser {
    padding-bottom: 2.3em; }
    article.node-proposal div.bubble-teaser:before {
      content: url(../images/bubble-tinyhook-white50.png);
      position: absolute;
      right: 32px;
      bottom: -35px; }
    article.node-proposal div.bubble-teaser span.border-cover-snippet {
      position: absolute;
      width: 10px;
      height: 10px;
      right: 35px;
      bottom: -5px; }
    article.node-proposal div.bubble-teaser li.node-readmore {
      position: absolute;
      bottom: 0.6em;
      right: 0.2em;
      opacity: 0.8; }
  article.node-proposal.hotness-0 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-20 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-40 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-60 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-80 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-100 div.bubble-teaser span.border-cover-snippet {
    -moz-transition: all 0.5s;
    -o-transition: all 0.5s;
    -webkit-transition: all 0.5s;
    transition: all 0.5s; }
  article.node-proposal div.bubble-detail-view {
    margin-left: 40px;
    border-width: 2px; }
    article.node-proposal div.bubble-detail-view:before {
      position: absolute;
      left: -43px;
      top: 24px; }
    article.node-proposal div.bubble-detail-view span.border-cover-snippet {
      position: absolute;
      width: 6px;
      height: 22px;
      left: -5px;
      top: 27px; }
  article.node-proposal.hotness-0 div.bubble-detail-view:before, article.node-proposal.hotness-20 div.bubble-detail-view:before, article.node-proposal.hotness-40 div.bubble-detail-view:before, article.node-proposal.hotness-60 div.bubble-detail-view:before, article.node-proposal.hotness-80 div.bubble-detail-view:before, article.node-proposal.hotness-100 div.bubble-detail-view:before {
    content: url(../images/bubble-left-bighook-heatmap.png); }
  article.node-proposal div.answered {
    text-align: center;
    margin-top: 10px; }
    article.node-proposal div.answered div.municipal-response-short {
      display: inline-block;
      font-size: 1.125em; }
    article.node-proposal div.answered div.negative {
      opacity: 0.2; }
      article.node-proposal div.answered div.negative:before {
        content: " ";
        font-family: "FontAwesome"; }
    article.node-proposal div.answered div.positive {
      position: relative; }
      article.node-proposal div.answered div.positive:before {
        content: " ";
        font-family: "FontAwesome"; }

div#overlay {
  padding: 15px;
  background: white;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  margin-bottom: 40px; }

body.node-type-proposal,
div#overlay {
  padding: 0;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 40px;
  opacity: 0.95; }
  body.node-type-proposal div#overlay-titlebar div#overlay-title-wrapper,
  div#overlay div#overlay-titlebar div#overlay-title-wrapper {
    display: none; }
  body.node-type-proposal div#overlay-titlebar div#overlay-close-wrapper a,
  div#overlay div#overlay-titlebar div#overlay-close-wrapper a {
    position: absolute;
    right: 0px;
    top: 0px;
    background: transparent;
    text-decoration: none;
    color: #656565;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    -webkit-transition: all 0.3s;
    transition: all 0.3s; }
    body.node-type-proposal div#overlay-titlebar div#overlay-close-wrapper a:after,
    div#overlay div#overlay-titlebar div#overlay-close-wrapper a:after {
      content: "";
      font-family: "FontAwesome";
      font-size: 32px; }
    body.node-type-proposal div#overlay-titlebar div#overlay-close-wrapper a:hover, body.node-type-proposal div#overlay-titlebar div#overlay-close-wrapper a:focus,
    div#overlay div#overlay-titlebar div#overlay-close-wrapper a:hover,
    div#overlay div#overlay-titlebar div#overlay-close-wrapper a:focus {
      color: #191919;
      -moz-transition: all 0.3s;
      -o-transition: all 0.3s;
      -webkit-transition: all 0.3s;
      transition: all 0.3s; }
  body.node-type-proposal div.hover-box-css,
  div#overlay div.hover-box-css {
    right: 15px; }
    body.node-type-proposal div.hover-box-css div.content-container,
    div#overlay div.hover-box-css div.content-container {
      padding-right: 25px; }
      body.node-type-proposal div.hover-box-css div.content-container li a,
      div#overlay div.hover-box-css div.content-container li a {
        background: #191919;
        color: #f2f2f2; }
        body.node-type-proposal div.hover-box-css div.content-container li a:hover, body.node-type-proposal div.hover-box-css div.content-container li a:focus,
        div#overlay div.hover-box-css div.content-container li a:hover,
        div#overlay div.hover-box-css div.content-container li a:focus {
          color: #f2f2f2; }
/* ... */

